examples/gateways/webhook.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: webhook-gateway
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
    # gateway controller will use this label to match with it's own version
    # do not remove
    argo-events-gateway-version: v0.11
spec:
  type: "webhook"
  eventSource: "webhook-event-source"
  processorPort: "9330"
  eventProtocol:
    type: "HTTP"
    http:
      port: "9300"
  template:
    metadata:
      name: "webhook-gateway-http"
      labels:
        gateway-name: "webhook-gateway"
    spec:
      containers:
        - name: "gateway-client"
          image: "kpavel/gateway-client:test"
          imagePullPolicy: "Always"
          command: ["/bin/gateway-client"]
        - name: "webhook-events"
          image: "kpavel/webhook-gateway:test"
          imagePullPolicy: "Always"
          command: ["/bin/webhook-gateway"]
# To make webhook secure, mount the secret that contains certificate and private key in the container
# and refer that mountPath in the event source.
#          volumeMounts:
#            - mountPath: "/bin/webhook-secure"
#              name: secure
#      volumes:
#        - name: secure
#          secret:
#            secretName: webhook-secure
      serviceAccountName: "argo-events-sa"
  service:
    metadata:
      name: webhook-gateway-svc
    spec:
      selector:
        gateway-name: "webhook-gateway"
      ports:
        - port: 12000
          targetPort: 12000
      type: LoadBalancer
  watchers:
    sensors:
      - name: "webhook-sensor"
